src/namespace-default/busybox.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox
  namespace: default
  labels:
    app: busybox
status:
  loadBalancer: {}
