src/namespace-default/allow-busybox-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-busybox-pod
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: busybox-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
    - namespaceSelector: {}
