src/namespace-default/allow-kube-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-system
  namespace: default
  labels:
    app.kubernetes.io/author: thomas-rausch
spec:
  ingress:
  - from:
    - podSelector: {} 
      namespaceSelector:
        matchLabels: 
          kubernetes.io/metadata.name: kube-system
  egress:
  - to:
    - podSelector: {} 
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
